--- a/면접 질문/[1장] 디자인 패턴과 프로그래밍 패러다임/1-01 디자인 패턴 실사용 케이스.md
+++ b/면접 질문/[1장] 디자인 패턴과 프로그래밍 패러다임/1-01 디자인 패턴 실사용 케이스.md
@@ -24,4 +24,9 @@ Service 는 그 사이에서 Controller 에서 넘겨 받은 요청에 맞게 Re
 Repository 는 데이터 접속 이외의 로직을 갖지 않아 동작의 예측이 가능해지고, 재활용이 쉬워집니다. 예측이 가능해지기 때문에 유닛 테스트가 쉬워지고,  
 Service 는 그러한 Repository 를 잘 조립해 매번 긴 코드의 작성을 어느 정도 회피할 수 있습니다. 조립한다는 점에서 함수형 프로그래밍의 느낌이 나기도 하네요 :)  
   
-우선 이 정도만 적어 두지만, 욕심을 내 NestJS 자체가 추구하는 디자인 패턴인 싱글톤 패턴, DI, IoC, DIP 및 사족으로 Repository 패턴에 대해 공부하여 설명해도 좋습니다 !
+우선 이 정도만 적어 두지만, 욕심을 내 NestJS 자체가 추구하는 디자인 패턴인 싱글톤 패턴, DI, IoC, DIP 및 사족으로 Repository 패턴에 대해 공부하여 설명해도 좋습니다 !  
+  
+## 참고 자료
+- ****[MVC, MVP 그리고 MVVM 패턴에 대하여](https://devowen.com/457)****
+- ****[MVC, MVP, MVVM, MVI](https://brunch.co.kr/@oemilk/113)****
+- **[[디자인패턴] IoC, DI, DIP 용어 정리](https://black-jin0427.tistory.com/194)**
