Update 1-01 디자인 패턴 실사용 케이스.md

--- a/면접 질문/[1장] 디자인 패턴과 프로그래밍 패러다임/1-01 디자인 패턴 실사용 케이스.md
+++ b/면접 질문/[1장] 디자인 패턴과 프로그래밍 패러다임/1-01 디자인 패턴 실사용 케이스.md
@@ -8,16 +8,19 @@ date: 2022-07-29
 디자인 패턴 중 사용해 본 케이스가 있다면 어떻게 그리고 왜 사용했는지 설명해 주실 수 있나요?
 
 ## 답변
-최근에 NestJS 를 사용하여 개발을 하고 있는데, 특히 Repository 패턴을 사용하여 Controller - Service - Repository 로 구조를 이루고 개발을 하고 있습니다.  
+최근에 NestJS 를 사용하여 개발을 하고 있는데,  
+특히 Repository 패턴을 사용하여 Controller - Service - Repository 로 구조를 이루고 개발을 하고 있습니다.  
 이 과정에서 Controller 는 요청을 받았을 때 적절한 Service 로 넘기는 역할 및 응답을(View),  
-Repository 는 순전히 데이터에 접속하기만 하는 역할만을(Model),
+Repository 는 순전히 데이터에 접속하기만 하는 역할만을(Model),  
 Service 는 그 사이에서 Controller 에서 넘겨 받은 요청에 맞게 Repository 로 적절한 데이터를 요청하여 비즈니스 로직을 수행하고,  
 응답을 위한 가공 후 다시 View 로 넘겨주는 역할을(Presenter) 하는, 개인적으로 MVP 에 가까운 디자인 패턴을 사용했다고 생각합니다.  
 이런 식으로 구현 했을 때, 각각 필요한 역할만을 수행하는 관심사의 분리가 잘 이루어져  
-Repository 는 데이터 접속 이외의 로직을 갖지 않아 동작의 예측이 가능해지고, 재활용이 쉬워집니다. 예측이 가능해지기 때문에 유닛 테스트가 쉬워지고,  
-Service 는 그러한 Repository 를 잘 조립해 매번 긴 코드의 작성을 어느 정도 회피할 수 있습니다. 조립한다는 점에서 함수형 프로그래밍의 느낌이 나기도 하네요 :)  
+Repository 는 데이터 접속 이외의 로직을 갖지 않아 동작의 예측이 가능해지고, 재활용이 쉬워집니다.  
+예측이 가능해지기 때문에 유닛 테스트가 쉬워지고, Service 는 그러한 Repository 를 잘 조립해 매번 긴 코드의 작성을 어느 정도 회피할 수 있습니다.  
+조립한다는 점에서 함수형 프로그래밍의 느낌이 나기도 하네요 :)  
   
-우선 이 정도만 적어 두지만, 욕심을 내 NestJS 자체가 추구하는 디자인 패턴인 싱글톤 패턴, DI, IoC, DIP 및 사족으로 Repository 패턴에 대해 공부하여 설명해도 좋습니다 !  
+우선 이 정도만 적어 두지만, 욕심을 내 NestJS 자체에서 사용하는 디자인 패턴인  
+싱글톤 패턴, DI, IoC, DIP 및 사족으로 Repository 패턴에 대해 공부하여 설명해도 좋습니다 !  
 
 ## 질문 의도 및 간략 후기
 본인의 의견이나 생각을 묻는 질문이 실제로 많을거라 생각합니다.  
