Update 1-02 싱글톤 패턴의 단점.md

--- a/면접 질문/[1장] 디자인 패턴과 프로그래밍 패러다임/1-02 싱글톤 패턴의 단점.md
+++ b/면접 질문/[1장] 디자인 패턴과 프로그래밍 패러다임/1-02 싱글톤 패턴의 단점.md
@@ -14,14 +14,18 @@ date: 2022-07-29
 의존성 주입이란 뭔가요?
 
 ## 답변
-모듈 간의 결합을 강하게 만들고(Tight Coupling), TDD(Test Driven Development) 를 할때 단위 테스트(Unit Test) 가 힘들어지는 점이 단점이라고 생각합니다.  
-단위 테스트가 힘들어 지는 이유는, 단위 테스트란 서로가 독립적이여야하고, 어떤 순서로든 실행할 수 있어야 하는데 싱글톤 패턴은 각 테스트 별 독립적인 인스턴스를 만들기 어렵기 때문입니다.
+모듈 간의 결합을 강하게 만들고(Tight Coupling),  
+TDD(Test Driven Development) 를 할때 단위 테스트(Unit Test) 가 힘들어지는 점이 단점이라고 생각합니다.  
+단위 테스트가 힘들어 지는 이유는,  
+단위 테스트란 서로가 독립적이여야하고, 어떤 순서로든 실행할 수 있어야 하는데 싱글톤 패턴은 각 테스트 별 독립적인 인스턴스를 만들기 어렵기 때문입니다.
 
 ### 예상 꼬리 질문 답변 1
 의존성 주입(Dependency Injection) 이 있다고 생각한다.
 
 ### 예상 꼬리 질문 답변 2
-[의존성 주입 참고 자료](#참고-자료) 첫번째 글에서 의존성 주입과, 의존성 주입을 얘기하면 빠질 수 없는 제어 반전(IoC, Inversion Of Control), 의존 관계 역전 원칙(DIP, Dependency Inverison Principle) 에 대해 꽤나 자세한 설명들이 나와있습니다. nestjs 를 사용하던 경험을 떠올리며 읽어보고, 그와 연관 지어 설명한다면 베스트가 아닐까 싶습니다!
+[의존성 주입 참고 자료](#참고-자료) 첫번째 글에서 의존성 주입과, 의존성 주입을 얘기하면 빠질 수 없는 제어 반전(IoC, Inversion Of Control),  
+의존 관계 역전 원칙(DIP, Dependency Inverison Principle) 에 대해 꽤나 자세한 설명들이 나와있습니다.  
+nestjs 를 사용하던 경험을 떠올리며 읽어보고, 그와 연관 지어 설명한다면 베스트가 아닐까 싶습니다!
 
 ## 질문 의도
 보통 장점이나 설명을 요구할텐데 단점을 물어본 이유는 잘 기억하는지 확인 차이기도 하지만, 꼬리 질문을 위한 포석입니다.  
