--- a/면접 질문/[1장] 디자인 패턴과 프로그래밍 패러다임/1-04 함수형과 객체지향.md
+++ b/면접 질문/[1장] 디자인 패턴과 프로그래밍 패러다임/1-04 함수형과 객체지향.md
@@ -14,7 +14,8 @@ date: 2022-07-29
 설명 자체는 마찬가지로 [함수형, 객체지향, 일급객체 참고 자료](#함수형,-객체지향,-일급객체-참고-자료)에서 확인할 수 있습니다.
 
 ### 예상 꼬리 질문 답변 1
-뭐가 더 우위에 있다고 생각하진 않지만, 개인적으로는 함수형을 선호하는 편이라고 생각합니다.  
+뭐가 더 우위에 있다고 생각하진 않다고 생각합니다. 되도록 적재적소에 맞게 사용하려 노력하고 있습니다.  
+그래도 그나마 하나를 고른다고 하면 개인적으로는 함수형을 선호하는 편이라고 생각합니다.  
 함수형 프로그래밍은 각 함수들을 조립하여 로직을 구성하기 때문에, 동작부가 간결해져 코드 이해도 및 가독성이 좋아진다고 생각하고,  
 각 함수들이 순수 함수들로 이루어져, 외부에 영향을 받지 않기 때문에 결과 예측이 쉬워지고,  
 그렇기에 유닛 테스트가 편해지며, 유연한 구조를 갖기 편해지기 때문입니다.  
