Modify / indexing 보완

--- a/cs/데이터베이스/4-04 인덱스.md
+++ b/cs/데이터베이스/4-04 인덱스.md
@@ -1,50 +1,53 @@
 ---
 title: 인덱스
-author: 김태영
-date: 2022-08-05
+date: 2023-09-21
 ---
 
 ## 면접 질문
 
-데이터베이스에 있어서 인덱스란 무엇인가요?
+데이터베이스에 있어서 인덱스(Index)란 무엇인가요?
 <br />
 
 ## 답변
 
-- 인덱스는 검색 속도를 높이기 위한 기술로 데이터를 빠르게 찾을 수 있는 하나의 장치라고 할 수 있습니다
-- 테이블의 레코드를 풀 스캔하지 않고 Column을 색인화하는 것을 말하며, B-tree라는 자료구조를 통해 검색 속도를 향상시킵니다
-- 테이블 안에 있는 데이터 중 찾고자 하는 데이터를 빠르게 찾을 수 있다는 장점이 있습니다
+- 인덱스는 데이터를 정렬한 자료구조로, <span style='color:yellow'>검색 속도를 향상</span>시킨다는 장점을 가집니다.
+- 테이블의 레코드를 풀 스캔하지 않고 Column을 색인화하는 것을 말하며, B-tree라는 자료구조를 통해 검색 속도를 향상시킵니다.
 
-## 예상 꼬리 질문 1
+## 꼬리 질문 1
 
 말씀하신 B-tree란 무엇인가요?
 
-## 예상 꼬리 질문 답변 1
+## 답변 1
 
-- 루트 노드, 리프 노드, 그리고 그 사이에 있는 브랜치 노드로 구성되어있는 자료구조입니다
+- B-tree란 Balanced Tree를 의미합니다.
+루트 노드, 리프 노드, 그리고 그 사이에 있는 브랜치 노드로 구성되어있는 자료구조입니다.
 - 인덱스 검색할 시, 이 비트리 자료구조는 전체 테이블을 탐색하는 것이 아니라 찾고자 하는 데이터가 있을 법한 리프 노드를 찾아들어가 검색합니다
 - 트리 탐색은 루트 노드부터 탐색이 일어나며 브랜치 노드를 거쳐 리프 노드로 내려오게 되는데, 찾고자 하는 데이터에 가까운 인덱스값을 추적하며 그 데이터가 가진 데이터 포인터를 찾아가며 검색이 들어가기 때문에 적은 탐색 횟수로도 빠르게 데이터를 찾을 수 있게 해줍니다
 
-## 예상 꼬리 질문 2
+
+- B+tree 구조는 B-tree 구조의 한계를 보완. 
+multi-level indexing & linked list
+
+## 꼬리 질문 2
 
 인덱싱의 단점이 있을까요?
 
-## 예상 꼬리 질문 답변 2
+## 답변 2
 
 - Index 생성시, 비워져 있던 MYI 파일이 생성됩니다.
   - 이 때문에 .mdb 파일 크기가 증가하게 된다는 단점이 있습니다
 - 한 페이지를 동시에 수정할 수 없게 되며 인덱스 된 Field에서 Data를 업데이트하거나, Record를 추가 또는 삭제시 성능이 떨어지게 됩니다.
-  - 따라서 데이터 변경 작업이 자주 일어나는 칼럼에 인덱싱을 하는 경우, Index를 재작성해야 하므로, 성능에 영향을 미치게 됩니다
+  - 따라서 <span style='color:yellow'>데이터 변경 작업이 자주 일어나는 칼럼</span>에 인덱싱을 하는 경우, Index를 재작성해야 하므로, 성능에 영향을 미치게 됩니다
 - 또한, 인덱스 자체가 비용이기도 합니다. 인덱스 리스트 그다음 컬렉션 순으로 탐색하도록 강제하기 때문에, 관련 읽기 비용이 들게 됩니다
 
-## 예상 꼬리 질문 3
+## 꼬리 질문 3
 
 그렇다면 어떤 컬럼에 인덱싱을 사용해야하고 어떤 때에 사용하지 않는 것이 좋을까요?
 
-## 예상 꼬리 질문 답변 3
+## 답변 3
 
-- where 절이 자주 사용되는 컬럼, 외래키가 사용되는 컬럼, 혹은 조인에 자주 이용되는 컬럼에 사용하면 좋습니다
-- 반면 데이터의 중복도가 높은 칼럼이거나(id와 같이) DML이 자주 일어나는 컬럼일 경우 사용하지 않는 것이 좋습니다
+- Good : where 절, foreign key 컬럼, 혹은 join / order by 절에서 사용 시
+- Bad : 데이터의 중복도가 높은 칼럼이거나(ex. id) DML이 자주 일어나는 컬럼의 경우
 
 ## 보충
 
