Chore / mv files

--- a/cs/운영체제/3-01 운영체제와 컴퓨터.md
+++ b/cs/운영체제/3-01 운영체제와 컴퓨터.md
@@ -1,6 +1,6 @@
 ---
 title: 운영체제와 컴퓨터
-author: 염하늘
+
 date: 2022-08-04
 ---
 
@@ -13,8 +13,8 @@ date: 2022-08-04
 
 ## 답변
 
-운영체제는 "사용자가 컴퓨터를 사용하기 위해 필요한 소프트웨어"를 의미합니다. 
-주된 역할은 컴퓨터의 하드웨어 즉 CPU, 메모리, 디스크 등 자원을 관리함에 있습니다. 
+운영체제는 "사용자가 컴퓨터를 사용하기 위해 필요한 소프트웨어"를 의미합니다.
+주된 역할은 컴퓨터의 하드웨어 즉 CPU, 메모리, 디스크 등 자원을 관리함에 있습니다.
 대표적인 운영체제의 종류로는 Windows, Linux, Mac OS, iOS 등이 있습니다.
 <br>
 <br />
@@ -27,4 +27,4 @@ date: 2022-08-04
 
 ## 참고 자료
 
-* [운영체제란? ](https://velog.io/@codemcd/%EC%9A%B4%EC%98%81%EC%B2%B4%EC%A0%9COS-1.-%EC%9A%B4%EC%98%81%EC%B2%B4%EC%A0%9C%EB%9E%80)
+-   [운영체제란? ](https://velog.io/@codemcd/%EC%9A%B4%EC%98%81%EC%B2%B4%EC%A0%9COS-1.-%EC%9A%B4%EC%98%81%EC%B2%B4%EC%A0%9C%EB%9E%80)
