--- a/cs/운영체제/3-08 뮤텍스와 세마포어.md
+++ b/cs/운영체제/3-08 뮤텍스와 세마포어.md
@@ -1,6 +1,6 @@
 ---
 title: 뮤텍스와 세마포어
-author: 염하늘
+
 date: 2022-08-07
 ---
 
@@ -13,24 +13,22 @@ date: 2022-08-07
 <br />
 
 ## 답변
-* 뮤텍스와 세마포어는 `공유자원을 안전하게 관리`하기 위해 상호배제(Mutual exclusion)를 달성하는 기법입니다.
-* 뮤텍스는 Key 에 해당하는 어떤 객체가 존재하며 이 객체를 소유한 스레드나 프로세스만이 공유자원에 접근할 수 있게 하는 기법이고
-* 세마포어는 현재 공유자원에 접근할 수 있는 스레드나 프로세스의 수를 나타내는 값을 두어 상호배제를 달성하는 기법입니다.
-* 임계영역이란 멀티 프로세스 환경에서 둘 이상의 프로세스가 동시에 접근해서는 안되는 공유 자원의 코드 영역입니다.
 
-
+-   뮤텍스와 세마포어는 `공유자원을 안전하게 관리`하기 위해 상호배제(Mutual exclusion)를 달성하는 기법입니다.
+-   뮤텍스는 Key 에 해당하는 어떤 객체가 존재하며 이 객체를 소유한 스레드나 프로세스만이 공유자원에 접근할 수 있게 하는 기법이고
+-   세마포어는 현재 공유자원에 접근할 수 있는 스레드나 프로세스의 수를 나타내는 값을 두어 상호배제를 달성하는 기법입니다.
+-   임계영역이란 멀티 프로세스 환경에서 둘 이상의 프로세스가 동시에 접근해서는 안되는 공유 자원의 코드 영역입니다.
 
 #### keyword 🔍
-* 세마포어 : 접근제한<br/>
-* 뮤텍스 : 단독 실행<br/>
-* 임계구역 : 접근 제한 영역
+
+-   세마포어 : 접근제한<br/>
+-   뮤텍스 : 단독 실행<br/>
+-   임계구역 : 접근 제한 영역
 
 <br>
 <br />
 
-
 ## 참고 자료
 
-* [세마포어와 뮤텍스](https://worthpreading.tistory.com/90)
-설명이 매우 직관적이고 그림으로 설명되어 있어서 좋습니다.
-*[임계구역](https://dduddublog.tistory.com/25)
+-   [세마포어와 뮤텍스](https://worthpreading.tistory.com/90)
+    설명이 매우 직관적이고 그림으로 설명되어 있어서 좋습니다. \*[임계구역](https://dduddublog.tistory.com/25)
