--- a/cs/자료구조/5-02 스택과 큐.md
+++ b/cs/자료구조/5-02 스택과 큐.md
@@ -1,6 +1,6 @@
 ---
 title: 스택과 큐
-author: 김용민
+
 date: 2022-08-09
 ---
 
@@ -18,16 +18,16 @@ date: 2022-08-09
 
 ### Stack
 
-* 스택은 가장 마지막으로 들어간 데이터가 가장 첫 먼저 나오는 성질 (LIFO, Last In First Out, 후입선출)을 가진 자료구조입니다.
-* push()를 통해 데이터를 집어넣고 pop()을 통해 데이터를 꺼냅니다.
-* 삽입 및 삭제에 O(1), 탐색에 O(n)이 걸립니다.
-* 재귀 함수, 웹 브라우저 방문 기록, 수식의 괄호 검사, 함수의 콜 스택 등에 사용됩니다.
+-   스택은 가장 마지막으로 들어간 데이터가 가장 첫 먼저 나오는 성질 (LIFO, Last In First Out, 후입선출)을 가진 자료구조입니다.
+-   push()를 통해 데이터를 집어넣고 pop()을 통해 데이터를 꺼냅니다.
+-   삽입 및 삭제에 O(1), 탐색에 O(n)이 걸립니다.
+-   재귀 함수, 웹 브라우저 방문 기록, 수식의 괄호 검사, 함수의 콜 스택 등에 사용됩니다.
 
 ### Queue
 
-* 큐는 스택과 반대로 먼저 집어넣은 데이터가 먼저 나오는 성질 (FIFO, First In Fisrt Out)을 지닌 자료 구조입니다.
-* enqueue()를 통해 데이터를 삽입하고 dequeue()를 통해 데이터를 꺼내옵니다.
-* 삽입 및 삭제에 O(1), 탐색에 O(n)이 걸립니다.
-* 우선 순위가 같은 작업 예약, 너비 우선 탐색 등에서 활용됩니다.
+-   큐는 스택과 반대로 먼저 집어넣은 데이터가 먼저 나오는 성질 (FIFO, First In Fisrt Out)을 지닌 자료 구조입니다.
+-   enqueue()를 통해 데이터를 삽입하고 dequeue()를 통해 데이터를 꺼내옵니다.
+-   삽입 및 삭제에 O(1), 탐색에 O(n)이 걸립니다.
+-   우선 순위가 같은 작업 예약, 너비 우선 탐색 등에서 활용됩니다.
 
 <br>
