--- a/cs/자료구조/5-06 해시 테이블.md
+++ b/cs/자료구조/5-06 해시 테이블.md
@@ -1,6 +1,6 @@
 ---
 title: 해시 테이블
-author: 김용민
+
 date: 2022-08-09
 ---
 
@@ -22,16 +22,16 @@ date: 2022-08-09
 
 ### Hash Table
 
-* 해시란 데이터를 효율적으로 관리하기 위해, 임의의 길이 데이터를 고정된 길이의 데이터로 매핑하는 것입니다.
-* 해시 테이블은 Key와 Value를 1:1로 연관지어 저장하는 자료구조입니다. key값에 해시 함수를 적용해 고유한 hash값을 index로 활용하여 해당 index에 value를 저장합니다.
-* 적은 리소스로 많은 데이터를 효율적으로 관리할 수 있으며 검색, 삽입, 삭제가 시간복잡도 O(1)로 빠릅니다.
-* 하지만 데이터가 많아지면 다른 데이터가 같은 해시 값으로 충돌하는 현상이 발생합니다.
+-   해시란 데이터를 효율적으로 관리하기 위해, 임의의 길이 데이터를 고정된 길이의 데이터로 매핑하는 것입니다.
+-   해시 테이블은 Key와 Value를 1:1로 연관지어 저장하는 자료구조입니다. key값에 해시 함수를 적용해 고유한 hash값을 index로 활용하여 해당 index에 value를 저장합니다.
+-   적은 리소스로 많은 데이터를 효율적으로 관리할 수 있으며 검색, 삽입, 삭제가 시간복잡도 O(1)로 빠릅니다.
+-   하지만 데이터가 많아지면 다른 데이터가 같은 해시 값으로 충돌하는 현상이 발생합니다.
 
 ### 꼬리 질문 답변 1
 
-* 충돌 문제 해결하기 위한 방법으로는
-  1. 연결 리스트로 노드를 계속 추가해나가는 방식인 체이닝과
-  2. 해시 함수로 얻은 주소가 아닌 다른 주소에 데이터를 저장할 수 있도록 허용하는 Open Addressing 등이 있습니다.
+-   충돌 문제 해결하기 위한 방법으로는
+    1. 연결 리스트로 노드를 계속 추가해나가는 방식인 체이닝과
+    2. 해시 함수로 얻은 주소가 아닌 다른 주소에 데이터를 저장할 수 있도록 허용하는 Open Addressing 등이 있습니다.
 
 Reference
 https://gyoogle.dev/blog/computer-science/data-structure/Hash.html
