--- a/cs/운영체제/3-02 메모리.md
+++ b/cs/운영체제/3-02 메모리.md
@@ -1,10 +1,11 @@
 ---
 title: 메모리
-author: 염하늘
+
 date: 2022-08-04
 ---
 
 ## 면접 질문
+
 메모리란 무엇인가요?</br>
 또 메모리 할당 방식에 대해서 말씀해주세요.
 <br/>
@@ -13,10 +14,11 @@ date: 2022-08-04
 
 메모리는 컴퓨터를 구성하는 요소 중 하나로 "명령어 및 데이터가 적재되는 공간"을 의미합니다.</br>
 메모리는 연속적으로 할당될 수 있고 이 방법에는 최초적합, 최적적합, 최악적합 등이 있습니다.
-- 최초 적합 : 첫번째
-- 최적 적합 : 가장 작은
-- 최악 적합 : 가장 큰
-~ 가용 공간을 할당함.
+
+-   최초 적합 : 첫번째
+-   최적 적합 : 가장 작은
+-   최악 적합 : 가장 큰
+    ~ 가용 공간을 할당함.
 
 또한 비연속적인 메모리 할당 기법으로는 페이징 기법과 세그먼테이션 기법이 있습니다. <br/>
 
@@ -26,9 +28,9 @@ date: 2022-08-04
 
 그렇다면 동적 메모리 할당에서의 가장 큰 문제점? 이를 해결하기 위한 방법은?<br/>
 
-- 단편화 (Fragmentation)
-가 발생할 수 있습니다. 메모리에 짜투리가 계속 발생하여 결국 어떤 프로세스에게도 할당되지 않는 메모리의 낭비가 발생하게 됩니다. 이를 해결 하기 위한 방법으로는 메모리 압축이 있습니다. (*디스크 조각 모음) 그러나 이는 꽤 시간이 소요되는 작업입니다. 보다 효율적인 방법이 페이징과 세그멘테이션 메모리 할당 방법입니다.
-<br/>
+-   단편화 (Fragmentation)
+    가 발생할 수 있습니다. 메모리에 짜투리가 계속 발생하여 결국 어떤 프로세스에게도 할당되지 않는 메모리의 낭비가 발생하게 됩니다. 이를 해결 하기 위한 방법으로는 메모리 압축이 있습니다. (\*디스크 조각 모음) 그러나 이는 꽤 시간이 소요되는 작업입니다. 보다 효율적인 방법이 페이징과 세그멘테이션 메모리 할당 방법입니다.
+    <br/>
 
 <br/>
 
