Review / network part 보완

--- a/cs/네트워크/2-03 Ip 주소.md
+++ b/cs/네트워크/2-03 Ip 주소.md
@@ -1,7 +1,6 @@
 ---
 title: TCP/IP 4계층 모델
-
-date: 2022-07-29
+date: 2022-07-29 / 2023-09-23 (R)
 ---
 
 ## 면접 질문
@@ -36,7 +35,5 @@ IP 주소는 `비연결성`과 `비신뢰성`이라는 한계가 있습니다.
 -   **비신뢰성**
     -   클라이언트가 의도하지 않은 순서로 서버에 패킷이 도착할 수 있습니다.
     -   전달 데이터의 용량이 크면 패킷 단위로 데이터를 나누어 전달합니다. 이 패킷들이 중간에 다른 노드들을 통해 전달될 수 있고, 그러면 순서가 달라질 수 있습니다.
-
-## 질문 의도 및 간략 후기
 
 ## 참고 자료
