--- a/cs/네트워크/2-10 IP 주소 체계.md
+++ b/cs/네트워크/2-10 IP 주소 체계.md
@@ -1,7 +1,6 @@
 ---
 title: IP 주소 체계
-
-date: 2022-08-03
+date: 2022-08-03 / 2023-09-23 (R)
 ---
 
 ## 면접 질문
@@ -10,7 +9,7 @@ IP 주소 체계의 발전 과정을 설명해주실 수 있나요?
 
 ## 답변
 
-IP 주소는 맨 처음에는 `클래스 기반의 할당 방식(CIDR)`을 사용하였습니다. A, B, C, D, E 다섯 개의 클래스로 구분하였고, 네트워크 주소와 호스트 주소로 놓아서 사용합니다. 클래스 A, B, C는 일대일 통신에, 클래스 D는 멀티 캐스트 통신에, 클래스 E는 앞으로 사용할 예비용으로 쓰입니다.이 방식에는 사용하는 주소보다 버리는 주소가 많다는 단점이 있었고, 이를 해소하기 위해 DHCP와 IPv6, NAT이 등장하였습니다.
+IP 주소는 맨 처음에는 `클래스 기반의 할당 방식`을 사용하였습니다. A, B, C, D, E 다섯 개의 클래스로 구분하였고, 네트워크 주소와 호스트 주소로 놓아서 사용합니다. 클래스 A, B, C는 일대일 통신에, 클래스 D는 멀티 캐스트 통신에, 클래스 E는 앞으로 사용할 예비용으로 쓰입니다.이 방식에는 사용하는 주소보다 버리는 주소가 많다는 단점이 있었고, 이를 해소하기 위해 DHCP와 IPv6, NAT이 등장하였습니다.
 
 `DHCP`(Dynamic Host Configuration Protocol)은 네트워크 장치의 IP 주소를 수동으로 지정하지 않고, 인터넷에 접속할 때마다 자동으로 IP 주소를 할당하는 방식입니다.
 
