--- a/cs/네트워크/2-06 전송계층.md
+++ b/cs/네트워크/2-06 전송계층.md
@@ -1,7 +1,6 @@
 ---
 title: 가상회선 패킷 교환 방식과 데이터그램 패킷 교환 방식
-
-date: 2022-08-03
+date: 2022-08-03 / 2023-09-23 (R)
 ---
 
 ## 면접 질문
@@ -11,13 +10,12 @@ date: 2022-08-03
 ## 답변
 
 전송 계층에는 TCP, UDP 프로토콜이 있습니다.
+이 두 프로토콜의 핵심은 각간 ***신뢰성 있는 연결 구축***, 빠른 속도가 중요한 ***실시간 연결 구축***에 있습니다.
 
-TCP는 가상회선 패킷 교환 방식을, UDP는 데이터 그램 패킷 교환 방식을 이용합니다.
-가상회선 패킷 교환방식은 패킷 사이의 순서를 보장하고 연결지향 프로토콜을 사용하여 연결을 하여 신뢰성을 구축하여 수신 여부를 확인합니다.
+TCP(Transmission Control Protocol)는 가상회선 패킷 교환 방식을, UDP는 데이터 그램 패킷 교환 방식을 이용합니다.
+가상회선 패킷 교환방식은 패킷 사이의 순서를 보장하고 연결지향 프로토콜을 사용하여 연결을 하여 **신뢰성** 을 구축하여 수신 여부를 확인합니다.<br/>
+
 데이터그램 패킷 교환 방식은 순서를 보장하지 않고, 수신 여부를 확인하지 않으나, 패킷이 최적의 경로를 선택하여 데이터를 전송합니다.
 
-## 질문 의도 및 간략 후기
-
-TCP와 UDP의 패킷 교환 방식의 차이점에 대해 알고있는지 알아보기 위함입니다.
 
 ## 참고 자료
