--- a/cs/네트워크/2-08 캡슐화와 비캡슐화 .md
+++ b/cs/네트워크/2-08 캡슐화와 비캡슐화 .md
@@ -1,7 +1,6 @@
 ---
 title: 캡슐화와 비캡슐화
-
-date: 2022-08-03
+date: 2022-08-03  / 2023-09-23 (R)
 ---
 
 ## 면접 질문
@@ -22,6 +21,8 @@ HTTP를 통해 웹 서버에 있는 데이터를 요청하려고 합니다. 이 
 
 캡슐화 과정은 애플리케이션 계층부터 링크 계층까지 각 계층의 헤더를 삽입하는 과정입니다. 전송 계층에서 `TCP 헤더`가 붙은 `세그먼트`가 됩니다.(데이터그램화) 인터넷 계층에서는 `IP 헤더`를 붙여 `패킷화`를 합니다. 그 후 `링크 계층`에서 `프레임 헤더` 및 `프레임 트레일러`가 붙어 프레임화가 됩니다.
 
+<img src = https://user-images.githubusercontent.com/57704568/270094561-989d6499-4e71-4435-afdb-cc33094a362c.png >
+
 ---
 
 ### 예상 꼬리 질문 2
@@ -33,6 +34,8 @@ HTTP를 통해 웹 서버에 있는 데이터를 요청하려고 합니다. 이 
 비캡슐화는 링크 계층 즉 하위 계층부터 애플리케이션 계층(상위 계층)으로 가며 캡슐화 과정에서 생성된 헤더 부분을 제거하는 과정입니다.
 캡슐화 된 데이터를 받으면 프레임화된 데이터를 패킷화하고, 패킷화된 데이터는 다시 세그먼트, 데이터그램화를 거쳐 메세지화가 되는 비캡슐화 과정이 일어납니다. 그리고 최종적으로 사용자에게 애플리케이션의 PDU인 메시지로 전달됩니다.
 
+<img src = https://user-images.githubusercontent.com/57704568/270094563-bcb911d5-5a95-4127-b0fa-b0a76e0bad4f.png >
+
 ---
 
 ### 예상 꼬리 질문 3
@@ -43,3 +46,8 @@ HTTP를 통해 웹 서버에 있는 데이터를 요청하려고 합니다. 이 
 
 PDU는 네트워크의 어떠한 계층에서 계층으로 데이터가 전달될 때 한 덩어리의 단위를 PDU(Protocol Data Unit)이라고 합니다.
 PDU는 제어 관련 정보들이 포함된 '헤더', 데이터를 의미하는 '페이로드'로 구성되어 있습니다. 애플리케이션 계층에서는 그냥 `메세지`, 전송 계층은 `세그먼트`, (UDP는 `데이터그램`), 인터넷 계층은 `패킷`, 링크 계층은 `프레임`(데이터 링크 계층), `비트`(물리계층)라는 명칭을 사용합니다.
+
+
+## 참고 자료
+
+[]
