--- a/cs/면접을 위한 CS 전공지식 노트/운영체제/3-03 프로세스와 스레드.md
+++ b/cs/면접을 위한 CS 전공지식 노트/운영체제/3-03 프로세스와 스레드.md
@@ -1,23 +1,26 @@
 ---
 title: 프로세스와 스레드
-
-date: 2022-08-04
+date: 2022-08-04 / 2023-10-23 (R)
 ---
 
 ## 면접 질문
 
 프로세스와 스레드는 어떤 차이가 있나요?<br/>
-멀티 스레드는 무엇을 의미하며 장점은 무엇인가요?
+멀티 태스킹과 멀티 스레드는 각각 무엇을 의미하며 장점은 무엇인가요?
 
 <br>
 <br />
 
 ## 답변
 
--   프로세스는 프로그램이 메모리에 올라가 실행된 상태를 의미하며
+- 프로세스는 프로그램이 메모리에 올라가 실행된 **상태**를 의미하며
     스레드는 프로세스 내의 실행 흐름을 의미합니다.<br/>
--   프로세스는 OS로부터 각각 독립된 메모리 영역을 할당받기에 A프로세스는 다른 B프로세스의 변수나 자료에 접근할 수 없습니다. 이에 비해 스레드는 메모리를 서로 공유할 수 있습니다.<br/>
--   멀티스레드는 하나의 프로세스가 여러 작업을 여러 개의 스레드를 사용하여 동시에 처리하는 것을 의미합니다. 높은 처리율과 성능 향상, 메모리 절약 등의 이점을 가집니다.
+
+- 프로세스는 OS로부터 각각 독립된 메모리 영역을 할당받기에 A프로세스는 다른 B프로세스의 변수나 자료에 접근할 수 없습니다. 이에 비해 스레드는 메모리를 서로 공유할 수 있습니다.<br/>
+
+- 멀티 태스킹은 다수의 Task를 프로세서가 번갈아 가면서 수행하는 것을 뜻하며, 사용자는 마치 동시에 여러 task가 수행되는 것처럼 보입니다. 목적은 프로세스의 응답 시간 최소화에 있습니다.<br/>
+
+- 멀티스레드는 하나의 프로세스가 여러 작업을 여러 개의 스레드를 사용하여 동시에 처리하는 것을 의미합니다. 높은 처리율과 성능 향상, 메모리 절약 등의 이점을 가집니다.
 
 <br>
 <br />
