--- a/cs/면접을 위한 CS 전공지식 노트/운영체제/3-01 운영체제와 컴퓨터.md
+++ b/cs/면접을 위한 CS 전공지식 노트/운영체제/3-01 운영체제와 컴퓨터.md
@@ -1,7 +1,6 @@
 ---
 title: 운영체제와 컴퓨터
-
-date: 2022-08-04
+date: 2022-08-04 / 2023-10-04 (R)
 ---
 
 ## 면접 질문
@@ -13,11 +12,22 @@ date: 2022-08-04
 
 ## 답변
 
-운영체제는 "사용자가 컴퓨터를 사용하기 위해 필요한 소프트웨어"를 의미합니다.
+운영체제는 "사용자가 컴퓨터를 사용하기 위해 필요한 **소프트웨어**"를 의미합니다.
 주된 역할은 컴퓨터의 하드웨어 즉 CPU, 메모리, 디스크 등 자원을 관리함에 있습니다.
 대표적인 운영체제의 종류로는 Windows, Linux, Mac OS, iOS 등이 있습니다.
-<br>
+<br/>
 <br />
+
+## 꼬리 질문
+
+Linux에 대해서 자세히 설명해주세요.
+<br/>
+
+- Linux는 unix 기반으로 만들어진 ***open source*** 운영 체제입니다. 이 부분이 MacOS나 Windows와 다른 점이기도 합니다.
+또한 ***kernel 기반의 system s/w*** 이기에 gui 등이 없다는 차이점도 있습니다.<br/>
+Linux 배포판 (Red Hat, CentOS, Debian etc...) 중에서 ubuntu를 자주 사용해왔습니다.
+
+<br/>
 
 ## 질문 의도 및 간략 후기
 
