Chore / png 위치 조정

--- a/cs/그림으로 공부하는 IT인프라 구조/infra-architecture/아키텍처의 종류.md
+++ b/cs/그림으로 공부하는 IT인프라 구조/infra-architecture/아키텍처의 종류.md
@@ -14,12 +14,13 @@
 
     1. 클라이언트-서버형 아키텍처 (Client/Server)
     client - PC, 스마트폰, 태블릿 등등
-    소수의 서버로 다수의 client를 처리할 수 있다는 장점이 있으나 client 측의 정기적인 s/w 업데이트가 필요하다.
+    소수의 서버로 다수의 client를 처리할 수 있다는 장점이 있으나 client 측의 정기적인 s/w 업데이트가 필요하다.<br/>
 
     2. 3계층형 아키텍처 (대부분의 이 구조를 채용)
+    <br/>
     <img src="../3layer-server.png"><br/>
 
----
+
 
 -   **수평 분할형 아키텍처** - 용도가 같은 서버를 여러 대 늘려나가는 방식
 
