Add / 인프라 기본이론

--- a/language/JS/비동기.md
+++ b/language/JS/비동기.md
@@ -1,7 +1,6 @@
 ---
 title: 동기와 비동기
-
-date: 2022-08-05
+date: 2022-08-05  / 2023-10-05 (R)
 ---
 
 ## 면접 질문
@@ -18,7 +17,7 @@ node js는 단일 쓰레드에서 구동되는 non-blocking I/O 이벤트 기반
 비동기 방식은 작업이 동시에 실행되지만, 요청에 대한 결과가 동시에 일어나지 않습니다. 동기적으로 코드를 실행했을 때 blocking 문제가 생기면서 에러가 발생할 수 있습니다. 이를 해결하기 위해 프로그램이 한번에 두 가지 이상의 일을 할 수 있도록 비동기적으로 작업을 실행합니다. (non-blocking)
 
 > blocking
-> 웹 앱이 브라우저에 특정 코드를 실행하느로 브라우저에게 제어권을 돌려주지 않을 때, 브라우저가 마치 정지된 것처럼 보이는 현상
+> 웹 앱이 브라우저에 특정 코드를 실행하느라 브라우저에게 제어권을 돌려주지 않을 때, 브라우저가 마치 정지된 것처럼 보이는 현상
 
 ![](https://s3.us-west-2.amazonaws.com/secure.notion-static.com/58fd83c5-e8cf-4b1f-be85-6a43d6183f15/Untitled.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Content-Sha256=UNSIGNED-PAYLOAD&X-Amz-Credential=AKIAT73L2G45EIPT3X45%2F20220803%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20220803T120555Z&X-Amz-Expires=86400&X-Amz-Signature=d436da8babe9e28c1d27888d8f24fc23bb10dbe1453411ab7d9cb22433294086&X-Amz-SignedHeaders=host&response-content-disposition=filename%20%3D%22Untitled.png%22&x-id=GetObject)
 
