--- a/cs/그림으로 공부하는 IT인프라 구조/인프라 기본이론.md
+++ b/cs/그림으로 공부하는 IT인프라 구조/인프라 기본이론.md
@@ -31,6 +31,15 @@
 
 ### 상태 vs 비상태
 
--   #### 상태를 가진다 = 과거에 부여한 '정보'를 저장해서 계속 활용 가능하다 <br/>
+-   #### 상태를 가진다 = 과거에 부여한 <span style='color:yellow'>'정보'를 저장해서 계속 활용 가능</span>하다 <br/>
     HTTP : (기본적으로) 상태 를 저장하지 않는 프로토콜이지만 상태 저장 방식도 사용함. <br/>
     ex) 회원 로그인 시 처음 한번만 id/pwd 입력해서 인증을 거치면 Session 개념을 사용해서 그 상태를 저장함. 계속 page 이동할 때마다 로그인할 필요가 없는 이유.
+
+### 고정 길이 vs 가변 길이
+
+-   #### 데이터를 저장할 때 길이를 고정하는 방식 / 변경하는 방식 (가변방식) 이 존재한다.
+-   데이터 저장은 책꽂이와 같다. 소설 / 전기 / 에세이 등이 구분 딱딱 되어있는 고정 길이 방식 vs 책꽂이를 내 마음대로 이동할 수 있는 가변 길이 방식
+-   특징
+    -   가변 길이 : <span style='color:yellow'>효율성 good </span>공간 활용이 유용하다. 데이터를 꽉 채워서 담을 수 있으므로. 성능은 불안정
+    -   고정 길이 : 쓸데없는 공간이 생기지만 안정적인 성능 (4행 3열에 있는 data (책)에 access)
+    -   ex) Windows - NTFS file system (고정 길이 방식) , <br/> ATM(Asynchronous Transfer Mode) protocol에서 cell 이라는 53 bite 고정 길이 방식
