Add / Cloud Service

--- a/cs/그림으로 공부하는 IT인프라 구조/인프라 기본이론.md
+++ b/cs/그림으로 공부하는 IT인프라 구조/인프라 기본이론.md
@@ -6,13 +6,13 @@
 
 ### 동기 VS 비동기 (Synchronous VS Asynchronous)
 
--   #### 동기는 수행을 기다린다. 언제까지? 끝날 때까지.
+-   **동기는 수행을 기다린다. 언제까지? 끝날 때까지.**
 -   특징
     -   ex) Ajax , <br/> DBMS
 
 ### 큐 (Queue)
 
--   #### 선입 선출 방식의 자료구조.
+-   **선입 선출 방식의 자료구조.**
 -   놀이기구에 타기 위해 줄을 서는 사람들.
 -   특징
     -   가장 먼저 들어간 것이 가장 빨리 나온다. (FIFO; First In First Out)
@@ -20,7 +20,7 @@
 
 ### 배타적 제어
 
--   #### 다른 것을 배제하도록 제어한다.
+-   **다른 것을 배제하도록 제어한다.**
 -   3차선 도로를 주행하던 차들이 한번에 다같이 1차선 도로로 들어올 수는 없다.<br/>
     한 대의 자동차가 1차선에 진입하면 다른 차들은 대기하도록 배타적 제어를 한다.
 -   특징
@@ -31,15 +31,27 @@
 
 ### 상태 vs 비상태
 
--   #### 상태를 가진다 = 과거에 부여한 <span style='color:yellow'>'정보'를 저장해서 계속 활용 가능</span>하다 <br/>
+-   **상태를 가진다 = 과거에 부여한 <span style='color:yellow'>'정보'를 저장해서 계속 활용 가능</span>하다 <br/>**
     HTTP : (기본적으로) 상태 를 저장하지 않는 프로토콜이지만 상태 저장 방식도 사용함. <br/>
     ex) 회원 로그인 시 처음 한번만 id/pwd 입력해서 인증을 거치면 Session 개념을 사용해서 그 상태를 저장함. 계속 page 이동할 때마다 로그인할 필요가 없는 이유.
 
 ### 고정 길이 vs 가변 길이
 
--   #### 데이터를 저장할 때 길이를 고정하는 방식 / 변경하는 방식 (가변방식) 이 존재한다.
+-   **데이터를 저장할 때 길이를 고정하는 방식 / 변경하는 방식 (가변방식) 이 존재한다.**
 -   데이터 저장은 책꽂이와 같다. 소설 / 전기 / 에세이 등이 구분 딱딱 되어있는 고정 길이 방식 vs 책꽂이를 내 마음대로 이동할 수 있는 가변 길이 방식
 -   특징
     -   가변 길이 : <span style='color:yellow'>효율성 good </span>공간 활용이 유용하다. 데이터를 꽉 채워서 담을 수 있으므로. 성능은 불안정
     -   고정 길이 : 쓸데없는 공간이 생기지만 안정적인 성능 (4행 3열에 있는 data (책)에 access)
     -   ex) Windows - NTFS file system (고정 길이 방식) , <br/> ATM(Asynchronous Transfer Mode) protocol에서 cell 이라는 53 bite 고정 길이 방식
+
+### 클라우드 서비스 유형
+
+#### IaaS / PaaS / SaaS
+
+-   IaaS (Infrastructure as a Service) : 개발사에 제공되는 물리적 자원을 가상화
+-   PaaS (Platform as a Service) : 개발사에 제공되는 플랫폼을 가상화
+-   SaaS (Software as a Service) : 고객에게 제공되는 s/w를 가상화
+
+    ![](https://www.whatap.io/ko/blog/9/img/iaas_paas_saas3.webp)
+
+\*참고 https://www.whatap.io/ko/blog/9/
