Add / stack & queue

--- a/cs/면접을 위한 CS 전공지식 노트/자료구조/5-02 스택과 큐.md
+++ b/cs/면접을 위한 CS 전공지식 노트/자료구조/5-02 스택과 큐.md
@@ -1,20 +1,15 @@
 ---
 title: 스택과 큐
-
-date: 2022-08-09
+date: 2022-08-09 / 2023-10-06 (R)
 ---
 
 ## 면접 질문
-
----
 
 스택과 큐에 대해서 설명해주세요.
 
 <br>
 
 ## 답변
-
----
 
 ### Stack
 
