--- a/cs/면접을 위한 CS 전공지식 노트/자료구조/5-01 배열과 연결리스트.md
+++ b/cs/면접을 위한 CS 전공지식 노트/자료구조/5-01 배열과 연결리스트.md
@@ -1,12 +1,9 @@
 ---
 title: 배열과 연결리스트
-
-date: 2022-08-09
+date: 2022-08-09 / 2023-10-06 (R)
 ---
 
 ## 면접 질문
-
----
 
 배열과 연결리스트에 대해 설명해 주세요
 
@@ -14,13 +11,15 @@ date: 2022-08-09
 
 ## 답변
 
----
-
 ### 배열 (Array)
 
-배열은 같은 타입의 변수들로 이루어져 있고, 크기가 정해져 있으며, 인접한 메모리 위치에 있는 데이터를 모아놓은 집합입니다. 또한, 중복을 허용하고 순서가 있습니다. 인덱스만 알고 있다면 O(1)로 해당 원소를 탐색할 수 있는 랜덤 접근(random access)이 가능하며, 삽입/삭제에는 O(n)이 걸립니다.
+-   데이터를 빈틈없이 순서대로 나열한 자료 구조
+
+배열은 **같은 타입**의 변수들로 이루어져 있고, **정해진 크기**가 있으며, 인접한 메모리 위치에 있는 데이터를 모아놓은 집합입니다. 또한, **중복을 허용**하고 순서가 있습니다. 인덱스만 알고 있다면 O(1)로 해당 원소를 탐색할 수 있는 랜덤 접근(random access)이 가능하며, 삽입/삭제에는 O(n)이 걸립니다.
 
 ### 연결 리스트 (Linked List)
+
+-   데이터를 순차적으로 연결한 자료 구조
 
 연결 리스트는 데이터를 감싼 노드를 포인터로 연결해서 공간적인 효율성을 극대화시킨 자료 구조입니다. 맨 앞에 있는 노드를 헤드라고 하며, prev 포인터와 next 포인터로 앞과 뒤의 노드를 연결합니다. 각 노드가 포인터로 연결되어 있는 구조이기 때문에 순차 접근만이 가능합니다. 탐색에는 O(n), 삽입/삭제 시에는 O(1)이 걸립니다.
 
@@ -32,4 +31,4 @@ date: 2022-08-09
 
 -   배열은 상자를 순서대로 나열한 데이터 구조이며 몇 번째 상자인지만 알면 해당 상자의 요소를 끄집어낼 수 있습니다. 즉, 랜덤 접근이 가능합니다.
 -   연결 리스트는 상자를 선으로 연결한 형태의 데이터 구조이며, 상자 안의 요소를 알기 위해서는 하나씩 상자 내부를 확인해봐야 한다는 점이 다릅니다. 즉, 순차접근만이 가능합니다.
--   탐색은 배열이 빠르며 데이터 추가 및 삭제는 연결 리스트가 빠릅니다.
+-   **_탐색은 배열이 빠르며 데이터 추가 및 삭제는 연결 리스트가 빠릅니다._**
