Add / 시간 복잡도, list vs set

--- a/cs/면접을 위한 CS 전공지식 노트/자료구조/5-06 해시 테이블.md
+++ b/cs/면접을 위한 CS 전공지식 노트/자료구조/5-06 해시 테이블.md
@@ -1,12 +1,10 @@
 ---
 title: 해시 테이블
-
-date: 2022-08-09
+date: 2022-08-09 / R 2023/11/05
 ---
 
 ## 면접 질문
 
----
 
 해시 테이블에 대해서 설명해주세요.
 
@@ -18,7 +16,6 @@ date: 2022-08-09
 
 ## 답변
 
----
 
 ### Hash Table
 
@@ -30,7 +27,7 @@ date: 2022-08-09
 ### 꼬리 질문 답변 1
 
 -   충돌 문제 해결하기 위한 방법으로는
-    1. 연결 리스트로 노드를 계속 추가해나가는 방식인 체이닝과
+    1. 연결 리스트로 노드를 계속 추가해나가는 방식인 **체이닝**과
     2. 해시 함수로 얻은 주소가 아닌 다른 주소에 데이터를 저장할 수 있도록 허용하는 Open Addressing 등이 있습니다.
 
 Reference
