--- a/cs/면접을 위한 CS 전공지식 노트/자료구조/시간복잡도.md
+++ b/cs/면접을 위한 CS 전공지식 노트/자료구조/시간복잡도.md
@@ -1,10 +1,37 @@
-### 시간 복잡도
+---
+title: 시간 복잡도
+date: 2023/11/05
+---
 
--   알고리즘의 성능을 나타내는 지표
+## 면접 질문
 
--   종류
-    -   O(1) / O(n) / O(n^)
+시간복잡도에 대해서 설명해주세요.
 
-### 공간 복잡도
+<br>
+
+## 답변
+
+- **시간복잡도**는 알고리즘의 성능을 나타내는 지표입니다.
+
+- 종류
+    -  O(1) / O(n) / O(n^)
+
+- 참고
+(https://www.youtube.com/watch?v=0b2VU45xmDk)
+
+- 아래 test method의 시간 복잡도는?
+
+~~~
+    public void test(List<Integer> nums) {
+        calls(nums)
+    }
+~~~
+-> calls method를 알아야 함.
+![](./test%20method%20시간복잡도.png)
+
+따라서 test method의 시간 복잡도는 O(N) [빅O N]이 됨.
+내가 구하려는 method가 내부에서 또 다른 함수 (**calls**)를 호출하고 있을 때, 이 시간복잡도를 먼저 알아야 함.
+
+## 공간 복잡도
 
 -   메모리의 크기
