--- a/reference/백엔드 면접 질문&답변.md
+++ b/reference/백엔드 면접 질문&답변.md
@@ -1,4 +1,4 @@
-# 신입 백엔드 면접 질문 Ver. 2.0.7 from [yukina1418's velog](https://velog.io/@yukina1418/%EC%B5%9C%EA%B7%BC-%EB%A9%B4%EC%A0%91%EC%9D%84-%EB%8B%A4%EB%8B%88%EB%A9%B4%EC%84%9C-%EB%B0%9B%EC%95%98%EB%8D%98-%EC%A7%88%EB%AC%B8%EB%93%A4)
+# 신입 백엔드 면접 답변 Ver. 0.1
 
 ## 커뮤니케이션 질문
 
@@ -22,38 +22,91 @@
 ### Database
 
 1. In-memory DB에 대해서 설명해주세요.
+- Disk base DB (일반 DBMS / MYSQL, ORACLE) <-> In memory DB
+말 그대로 외부 저장 장치가 아닌 **메모리**에서 데이터를 읽고 쓰는 것을 의미합니다. Disk base DB에 비해서 데이터 이용 속도가 빠릅니다.
+
 2. Redis를 사용하신 이유가 무엇인가요?
+- 모든 데이터를 **메모리**에 저장하고 조회하기 때문에 빠른 read, write **속도**를 보장하며, 다양한 자료구조를 지원합니다.
+ex) Sorted Set
+
 3. Redis와 Memcached의 차이를 이야기해주세요.
+- Redis : 데이터가 디스크에도 저장이 되기 때문에 데이터 복구 가능
+- Memcached : 데이터가 메모리에만 저장 되기 때문에 프로세스 죽거나 장애 
+발생 시 데이터가 사라짐. 문자열만 지원.
+
 4. Redis를 비전공자에게 설명해준다고 생각하고 이야기해주세요.
+- Redis를 한마디로 정의한다면, 고성능 key-value 저장소로서 문자열, list, hash, set 형식의 데이터를 지원하는 NoSQL 입니다.
+
 5. Redis의 단점은 무엇이 있을까요?
-6. Redis를 활용하여 로그아웃을 어떻게 구현했는지 설명해주세요.
+- RDB 작업 (특정 간격마다 모든 데이터를 디스크에 저장)이 오래 걸립니다.
+
+~~6. Redis를 활용하여 로그아웃을 어떻게 구현했는지 설명해주세요.~~
+
 7. 데이터베이스 정규화에 대하여 설명해주세요.
+- 데이터의 무결성을 유지하는 것입니다. = **데이터의 중복을 허용하지 않는 것**입니다.
+
 8. 비정규화는 무엇인가요?
+- 의도적으로 정규화된 데이터 모델을 통합, 중복, 분리하는 과정입니다.
+
 9. Database Injection에 대해 아는대로 이야기해주세요.
-10. ORM이 편하고 좋은데, SQL을 알아야만 할까요?
-11. SQL로 간단한 문제 드릴테니 풀어주세요.
+- 🔑 keyword - 보안 취약점<br/>
+사용자로부터 입력받은 데이터를 적절하게 처리하지 않고 그대로 DB 쿼리에 포함시킬 때 발생할 수 있는 문제. ex) 공격자가 입력 필드에 SQL 코드를 삽입하여 DB 공격 시도하는 SQL Injection 이 대표적 case. 이를 막기 위해 입력값을 검증 or ORM(Object-Relational Mapping) 사용
+
+10. ORM이 무엇인가요? 사용해 본 적 있나요?
+ORM이 편하고 좋은데, SQL을 알아야만 할까요?
+- ORM (Object-Relational Mapping)은 객체와 DB 간의 매핑을 자동으로 처리해주는 기술. SQL 쿼리를 직접 작성하지 않아도 된다는 장점. 그러나 복잡한 데이터를 처리할 때는 ORM이 오버헤드를 일으킬 수 있기에, 특수한 요구사항의 경우에는 직접 SQL을 사용하는 것이 나을 수 있습니다.
+
+~~11. SQL로 간단한 문제 드릴테니 풀어주세요.~~
+
 12. RDBMS와 NoSQL은 언제 사용하는 것이 좋을까요?
+- RDBMS : 데이터의 **일관성**이 중요한 경우 <br/>
+- NoSQL : 대용량의 **비정형 데이터**를 다룰 때 적합함. 속도와 확장성이 중요한 경우 사용.(빠른 Read/Write)
+**Sharding(샤딩)** : 🔑 keyword - 데이터를 split
+![Sharding](image.png)
+
+대용량의 DB를 처리하기 위한 분할 방법. 데이터를 여러 개의 작은 파티션/샤드로 나누는 것을 의미합니다.
+각 파티션마다 독립된 DB 서버를 할당하여 DB 부하 분산.
+NoSQL의 확장성과 관련이 있는 개념. (https://www.youtube.com/watch?v=P7LqaEO-nGU)
+
 13. 1 + N 문제를 겪어보신 적이 있나요? 어떻게 해결하셨나요? 어떻게 해결하는지 알고 계신가요?
+- 🔑 keyword - 쿼리 실행의 문제
+1+N 문제는 주로 ORM을 사용하는 상황에서 발생하는 성능 문제를 의미합니다. 주 테이블을 조회한 후, 해당 테이블과의 관계에 있는 N개의 테이블을 조회하는 것을 반복해야 할 때 발생합니다. 이로 인해 총 N+1번의 쿼리가 실행되는 문제가 생깁니다. <br/>
+해결 방법 : 즉시 로딩 (관련된 모든 데이터를 한 번에 조회하여 쿼리 수를 최소화) / 캐싱 활용 (반복적으로 사용되는 데이터를 메모리에 캐싱)
 
 ### Stack
 
 1. REST API와 GraphQL의 차이와 GraphQL을 썼을 때의 장단점을 설명해주세요.
 2. 데이터로더에 대해 알고 계시나요?
 3. JWT의 구조를 설명해주세요.
-4. Kafka가 사용해보신 적 있나요?
+~~4. Kafka가 사용해보신 적 있나요?~~
+
 5. node가 싱글스레드인데도 여러가지 병렬 작업이 되는 이유를 알려주세요.
+- JS 코드의 일정 부분이 multi threading 을 지원하는 c++ 에 기반하기 때문. <br/>
+NodeJS 는 기본적으로 Javascript 의 이벤트 루프를 메인 스레드로 활용하기 때문에 **싱글 스레드**이다. 그러나 기본 작업 외 특정 작업을 수행할 때, 추가 스레드가 필요한 경우에는 새로운 스레드를 생성하여 실행할 수 있다.
+[NodeJS-싱글스레드](https://gyofeel.github.io/js/nodejs/web/Javascript%EC%99%80-Nodejs%EB%8A%94-%EB%AA%A8%EB%91%90-%EC%8B%B1%EA%B8%80-%EC%8A%A4%EB%A0%88%EB%93%9C%EC%97%90%EC%84%9C-%EC%8B%A4%ED%96%89%EB%90%98%EB%8A%94%EA%B0%80/)
+
 6. CPU 부하가 큰 작업이 진행되서 이벤트루프에 묶여가지고 서버가 멈추면 어떻게 해결해야하나요?
 7. 이거 외부 애플리케이션(AWS,K8S)말고 자체적으로 할 수 있는 방법 찾습니다..
 8. JWT는 왜 사용을 하셨나요? 구조에 대하여 설명해주세요.
 9. Code-First, Schema-First의 차이와 장단점에 대해 설명해주세요.
 10. 자바스크립트에서는 사용할 수 없지만 타입스크립트에서 사용할 수 있는 것은 무엇이 있을까요?
-11. 타입스크립트가 어떻게 자바스크립트로 컴파일해서 실행이 될 수 있는지 설명해주세요.
-12. 자바스크립트와 타입스크립트의 차이점이 무엇일까요?
-13. 자바스크립트가 있는데, 왜 굳이 타입스크립트를 사용하나요?
+- typescript에서는 변수, 함수, 객체 등의 **type**을 명시적으로 선언 + type 검사를 제공하여 런타임 시 발생할 수 있는 오류를 방지할 수 있습니다.<br/>
+interface - 객체의 구조 정의 가능 <br/>
+Generic - type을 동적으로 지정할 수 있는 방법을 제공
 
-### Framework
+11. 타입스크립트가 어떻게 자바스크립트로 컴파일해서 실행이 될 수 있는지 설명해주세요.
+
+~~12. 자바스크립트와 타입스크립트의 차이점이 무엇일까요?~~
+
+13. 자바스크립트가 있는데, 왜 굳이 타입스크립트를 사용하나요?
+정적 타입 시스템 - 코드의 안정성 높이고 런타임 오류 사전 방지 가능. 
+
+### Framework (Nest JS)
 
 1. Nest의 특징은 무엇인가요?
+- Node.js 기반 Application을 빌드하기 위한 framework.
+- Module 구조 & DI 지원 & Express 호환 & Websocket 지워
+
 2. Nest의 Provider scope에 대해 설명해주세요.
 3. Nest에서 순환종속 문제는 어떻게 해결할 수 있나요?
 4. 데코레이터 디자인패턴에 대해 설명해주세요.
@@ -73,6 +126,12 @@
 6. 쿠버네티스에 대하여 설명하고, 사용하는 이유를 이야기해주세요.
 7. 쿠버네티스는 어떤 구조로 실행이 되는지 설명해주세요.
 8. CI/CD에 대하여 설명해주세요.
+9. 컨테이너와 가상머신의 차이는 무엇일까요? 
+- 컨테이너 : 가상 머신 대비 높은 성능과 효율. 컨테이너는 보통 물리 서버에 Docker daemon을 설치하고, 그 위에 컨테이너를 하나씩 배포합니다. 따라서 hypervisor 기반에서 동작되는 vm보다 훨씬 더 많은 서비스를 올릴 수 있습니다. <br/>
+**VM ->  🔑 hypervisor 기반**  <br/>
+**Container ->  🔑 필요한 모든 것이 packaging**  <br/>
+**docker -> (VM을 사용할 때 생기는) OS의 overhead를 줄이는 데 획기적.**
+[Container vs VM](https://www.redhat.com/ko/topics/containers/containers-vs-vms)
 
 ### Computer science
 
@@ -122,3 +181,9 @@
 3. 마지막 질문에서 하면 좋은 것
 4. 어떤 과정을 통해서 서류가 합격이 되었는지 (이 부분은 내부 비밀이라고 케바케라고는 하는데 저는 다 답변해주셨습니다.)
 5. 면접이 끝났는데, 저를 어떻게 보셨는지 장점과 단점이 무엇이라 생각하시는지
+
+---
+***Reference***
+
+[🗂️백엔드 개발자 면접 질문 모음](
+https://velog.io/@yukina1418/%EC%B5%9C%EA%B7%BC-%EB%A9%B4%EC%A0%91%EC%9D%84-%EB%8B%A4%EB%8B%88%EB%A9%B4%EC%84%9C-%EB%B0%9B%EC%95%98%EB%8D%98-%EC%A7%88%EB%AC%B8%EB%93%A4)
