Add / docker의 개념과 사용 이유

--- a/reference/백엔드 면접 질문&답변.md
+++ b/reference/백엔드 면접 질문&답변.md
@@ -1,4 +1,4 @@
-# 신입 백엔드 면접 답변 Ver. 0.1
+# 신입 백엔드 면접 답변
 
 ## 커뮤니케이션 질문
 
@@ -101,12 +101,9 @@ Generic - type을 동적으로 지정할 수 있는 방법을 제공
 13. 자바스크립트가 있는데, 왜 굳이 타입스크립트를 사용하나요?
 정적 타입 시스템 - 코드의 안정성 높이고 런타임 오류 사전 방지 가능. 
 
-### Framework (Nest JS)
+### Framework
 
 1. Nest의 특징은 무엇인가요?
-- Node.js 기반 Application을 빌드하기 위한 framework.
-- Module 구조 & DI 지원 & Express 호환 & Websocket 지워
-
 2. Nest의 Provider scope에 대해 설명해주세요.
 3. Nest에서 순환종속 문제는 어떻게 해결할 수 있나요?
 4. 데코레이터 디자인패턴에 대해 설명해주세요.
@@ -119,8 +116,21 @@ Generic - type을 동적으로 지정할 수 있는 방법을 제공
 ### Deploy
 
 1. 도커에 대하여 설명하고, 사용하는 이유를 이야기해주세요.
+- Docker :
+**컨테이너 기반의 가상화 플랫폼**으로. 응용 프로그램을 s/w 컨테이너로 패키징하고 배포하는 데 사용됩니다. <br/>
+Docker를 많이 사용하는 이유는
+1. 첫째로 높은 이식성과 확장성. 어떤 환경에서든 🔑 **동일한 환경**에서 Application을 실행할 수 있습니다.
+2. 둘째로 🔑 **가볍다**는 점. vm과 달리 컨테이너는 Host OS의 커널을 공유하기 때문에 더 가볍고, 여러 개의 컨테이너가 같은 Host에서 동시에 실행될 수 있다는 점도 장점입니다.
+
 2. 도커가 생겨나게 된 배경, 역사에 대해서 설명해달라.
-3. 가상머신과 도커의 차이를 설명해주세요.
+-  2013년에 DotCloud에서 개발되었고, 이후 컨테이너 기술을 더 쉽게 사용할 수 있도록 도커 프로젝트가 시작되었습니다. 현 시점에서는 컨테이너 기반의 가상화 플랫폼으로 급속히 성장하였습니다.
+
+3. 가상머신(vm)과 도커의 차이를 설명해주세요.
+
+- vm은 전가상화 방식으로, hypervisor를 사용하여 각 vm이 독립된 OS를 가진 완전한 가상환경을 생성합니다. 그렇기에 무겁고, 느리고, 여러 vm을 운영하는 데에 드는 자원 소모가 상당합니다.
+- 그에 반해 docker는 process 격리 기술을 사용해서 Host OS의 kernel을 공유하기 때문에 (VM을 사용할 때 생기는) OS의 overhead를 줄이는 데 획기적입니다. <br/>
+또한 가볍고, 컨테이너당 필요한 OS 부분만 포함하기 때문에 빠르게 시작될 수 있습니다. 
+
 4. 컨테이너 관리도구는 도커가 아니라 다른 것도 있는데 왜 도커를 사람들이 많이 사용할까요?
 5. 도커라는 컨테이너 관리 툴이 있는데 쿠버네티스를 사용해야하는 이유는 무엇인가
 6. 쿠버네티스에 대하여 설명하고, 사용하는 이유를 이야기해주세요.
@@ -136,9 +146,26 @@ Generic - type을 동적으로 지정할 수 있는 방법을 제공
 ### Computer science
 
 1. 세션과 쿠키의 차이를 설명해주세요.
-2. Google.com을 쳤을 때 벌어지는 일을 설명해주세요. <- AWS 코리아에서 적어주신게 있어서 그쪽 링크로 걸어놨습니다.
+🔑 keyword - user의 정보가 저장되는 **위치**
+- cookie : 클라이언트 측에 저장되는 데이터 
+- session : 서버 측에 저장되는 데이터. 쿠키보다 보안이 뛰어남.
+
+2. Google.com을 쳤을 때 벌어지는 일을 설명해주세요.
+
 3. http와 https의 차이를 설명해주세요.
+
+🔑 keyword - **데이터가 암호화**되어 전송
+- http: 데이터 전송 프로토콜, 데이터가 암호화되지 않아 보안에 취약하며 기본 port는 80 입니다.
+- https : http에 보안이 추가된 프로토콜로, 데이터를 암호화하여 전송합니다. TLS/SSL을 사용하며 기본 port는 443입니다.
+
 4. 알고있는 자료구조에 대해 설명해주세요.
+
+- 배열(Array):동일한 데이터 type의 요소들이 인덱스로 구성된 자료 구조.
+- 연결 리스트(Linked List):노드들이 포인터로 연결된 선형 자료 구조.
+- 스택(Stack): LIFO 원칙에 따라 데이터를 저장하는 자료 구조.
+- 큐(Queue): FIFO 원칙에 따라 데이터를 저장하는 자료 구조.
+- 해시 테이블(Hash Table): key와 value의 쌍을 저장하는 자료 구조로, 키를 해시 함수에 적용하여 인덱스로 변환한 후 해당 인덱스에 값을 저장.
+
 5. 큐와 스택의 차이에 대해 설명해주세요 & 언제 큐를 사용하는 것이 좋고, 언제 스택을 사용하는 것이 좋을까요?
 6. 왜 회사들은 백엔드 개발자에게 자료구조나 알고리즘을 코딩테스트같은 것으로 확인을 하려고 하는 것일까요?
 
@@ -181,9 +208,3 @@ Generic - type을 동적으로 지정할 수 있는 방법을 제공
 3. 마지막 질문에서 하면 좋은 것
 4. 어떤 과정을 통해서 서류가 합격이 되었는지 (이 부분은 내부 비밀이라고 케바케라고는 하는데 저는 다 답변해주셨습니다.)
 5. 면접이 끝났는데, 저를 어떻게 보셨는지 장점과 단점이 무엇이라 생각하시는지
-
----
-***Reference***
-
-[🗂️백엔드 개발자 면접 질문 모음](
-https://velog.io/@yukina1418/%EC%B5%9C%EA%B7%BC-%EB%A9%B4%EC%A0%91%EC%9D%84-%EB%8B%A4%EB%8B%88%EB%A9%B4%EC%84%9C-%EB%B0%9B%EC%95%98%EB%8D%98-%EC%A7%88%EB%AC%B8%EB%93%A4)
